Test runs: simpler domain model